lab09-appdev-lifecycle/openshift-green.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "9779"
    labels:
      expose: "true"
      app: beer-api-green
      version: 1.0-SNAPSHOT
      group: agilabs
    name: beer-api-green
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: beer-api-green
      provider: fabric8
      group: agilabs
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
    labels:
      app: beer-api-green
      provider: fabric8
      version: 1.0-SNAPSHOT
      group: agilabs
    name: beer-api-green
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      app: beer-api-green
      provider: fabric8
      group: agilabs
    strategy:
      rollingParams:
        timeoutSeconds: 3600
      type: Rolling
    template:
      metadata:
        annotations:
        labels:
          app: beer-api-green
          provider: fabric8
          version: 1.0-SNAPSHOT
          group: agilabs
      spec:
        containers:
        - env:
          - name: AB_JMX_EXPORTER_CONFIG
            value: prometheus.yml
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: beer-api:ready-for-prod
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 180
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "1.0"
              memory: 512Mi
            requests:
              cpu: "0.2"
              memory: 512Mi
          securityContext:
            privileged: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: false
        containerNames:
        - spring-boot
        from:
          kind: ImageStreamTag
          name: beer-api:ready-for-prod
      type: ImageChange
