lab09-appdev-lifecycle/openshift-route.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/balance: roundrobin
    labels:
      app: beer-api
      provider: fabric8
      version: 1.0-SNAPSHOT
      group: agilabs
    name: beer-api
  spec:
    port:
      targetPort: http
    to:
      kind: Service
      name: beer-api-green
  status: {}
